--- a/dDocentHPC_dev.bash.save.1
+++ b/dDocentHPC_dev.bash.save.1
@@ -1689,19 +1689,19 @@ runBWA(){
 	fi
 	
 	# set bwa-meme mode https://github.com/kaist-ina/BWA-MEME#changing-memory-requirement-for-index-in-bwa-meme
-	if [[ ${freeMEM} -gt 188000000 ]]; then 
-		echo "";echo `date` " Running bwa-meme (RAM: 188G, Free Memory: $freeMEM)"
-		bwaCMD="bwa-meme mem -7"
-	elif [[ ${freeMEM} -gt 88000000 ]]; then 
-		echo "";echo `date` " Running bwa-meme_mode2 (RAM: 88G, Free Memory: $freeMEM)"
-		bwaCMD="bwa-meme_mode2 mem -7"
-	elif [[ ${freeMEM} -gt 38000000 ]]; then 
-		echo "";echo `date` " Running bwa-meme_mode1 (RAM: 38G, Free Memory: $freeMEM)"
-		bwaCMD="bwa-meme_mode1 mem -7"
-	else
+	# if [[ ${freeMEM} -gt 188000000 ]]; then 
+		# echo "";echo `date` " Running bwa-meme (RAM: 188G, Free Memory: $freeMEM)"
+		# bwaCMD="bwa-meme mem -7"
+	# elif [[ ${freeMEM} -gt 88000000 ]]; then 
+		# echo "";echo `date` " Running bwa-meme_mode2 (RAM: 88G, Free Memory: $freeMEM)"
+		# bwaCMD="bwa-meme_mode2 mem -7"
+	# elif [[ ${freeMEM} -gt 38000000 ]]; then 
+		# echo "";echo `date` " Running bwa-meme_mode1 (RAM: 38G, Free Memory: $freeMEM)"
+		# bwaCMD="bwa-meme_mode1 mem -7"
+	# else
 		echo "";echo `date` " Running bwa-mem2 (RAM: <38G, Free Memory: $freeMEM)"
 		bwaCMD="bwa-meme mem"
-	fi
+	# fi
 	
 	#run bwa-meme
 	if [ ! -z $INSERT ]; then
@@ -1799,27 +1799,27 @@ filterSamFLAGS(){
 	local INFILE=$1
 	local MAPPING_MIN_QUALITY=$2
 	local SAMTOOLS_VIEW_F=$3
-	local SAMTOOLS_VIEW_f=$4
+	local SAMTOOLS_VIEW_f2=$4
 	local SAMTOOLS_VIEW_Fcustom=$5
 	local SAMTOOLS_VIEW_fcustom=$6
 	
-	# echo  $INFILE $MAPPING_MIN_QUALITY $SAMTOOLS_VIEW_F $SAMTOOLS_VIEW_f $SAMTOOLS_VIEW_Fcustom $SAMTOOLS_VIEW_fcustom
+	# echo  $INFILE $MAPPING_MIN_QUALITY $SAMTOOLS_VIEW_F $SAMTOOLS_VIEW_f2 $SAMTOOLS_VIEW_Fcustom $SAMTOOLS_VIEW_fcustom
 	
 	#Filter 1: remove reads based on samtools flags
-	echo "";echo "  "`date` " Applying Filter 1: removing paired reads mapping to different contigs, secondary, and supplementary alignments"
+	echo "";echo "  "`date` " Applying Filter 1: removing paired reads mapping to different contigs, secondary, and supplementary alignments..."
 	
-	# MAPPING_MIN_QUALITY=1
-	# SAMTOOLS_VIEW_F=0
-	# SAMTOOLS_VIEW_f=0
-	# SAMTOOLS_VIEW_Fcustom=0
-	# SAMTOOLS_VIEW_fcustom=1
+	#MAPPING_MIN_QUALITY=1
+	#SAMTOOLS_VIEW_F=0
+	#SAMTOOLS_VIEW_f2=0
+	#SAMTOOLS_VIEW_Fcustom=0
+	#SAMTOOLS_VIEW_fcustom=1
 	filterMapQUAL="-q $MAPPING_MIN_QUALITY"
-	filterSamFLAGS="-F $SAMTOOLS_VIEW_F -f $SAMTOOLS_VIEW_f"
+	filterSamFLAGS="-F $SAMTOOLS_VIEW_F -f $SAMTOOLS_VIEW_f2"
 	filterCustomSamFLAGS="-F $SAMTOOLS_VIEW_Fcustom -f $SAMTOOLS_VIEW_fcustom"
 	echo " ";echo "          samtools view -h1 $filterMapQUAL $filterSamFLAGS $filterCustomSamFLAGS"
 	# samtools view -h $filterMapQUAL $filterSamFLAGS $filterCustomSamFLAGS reads3.test.basic-RAW.bam | less -S
 	# ls *$CUTOFFS-RAW.bam | sed 's/\-RAW.bam//g' | parallel --no-notice -j $NUMProc "samtools view -h1 $filterMapQUAL $filterSamFLAGS $filterCustomSamFLAGS {}-RAW.bam "
-	samtools view -h $filterMapQUAL $filterSamFLAGS $filterCustomSamFLAGS $INFILE 2>/dev/null
+	crun samtools view -h $filterMapQUAL $filterSamFLAGS $filterCustomSamFLAGS $INFILE 2>/dev/null
 }
 export -f filterSamFLAGS
 
@@ -1827,6 +1827,9 @@ filterAS(){
 	local FILTER_MIN_AS=$1
 	local FILTER_MIN_AS_LEN=$2
 	
+	# Filter 2: remove reads based on alignment score relative to read length
+	# echo "";echo "  "`date` " Applying Filter 2: removing reads with low alignment score relative to read length..."
+
 	# filter bam files by alignment score with respect to read length
 	# should be run after other filters
 	awk -v as_threshold="$FILTER_MIN_AS" -v as_length="$FILTER_MIN_AS_LEN" '
@@ -1839,14 +1842,14 @@ filterAS(){
 
 		# Extract the read length from CIGAR so that hard clipping cant make a read appear shorter than it is to the filter
 		read_length = 0
-                n = split($6,a,"[MIDNSHP=X]")
-    		for(i=1; i <= n; i++) {
-      			if(a[i]~/[0-9]+/) {
-        			read_length += a[i];
-      			}
-    		}
+		n = split($6,a,"[MIDNSHP=X]");
+		for(i=1; i <= n; i++) {
+			if(a[i]~/[0-9]+/) {
+				read_length += a[i];
+			}
+		}
 
-		# Search for the "AS:i:" field and extract the alignment score
+		# Search for the AS field and extract the alignment score
 		alignment_score = 0
 		for (i = 2; i <= NF; i++) {
 		  if (match($i, "AS:i:")) {
@@ -1874,11 +1877,16 @@ export -f filterAS
 
 filterSoftClipTOTAL(){
 	local SOFT_CLIP_CUT=$1
+
+	# Filter 3: remove reads with too many soft clipped bases...
+	# echo "";echo "  "`date` " Applying Filter 3: removing reads with too many soft clipped bases..."
 	awk -v soft_clip_cut="$SOFT_CLIP_CUT" '
+	  BEGIN { FS="\t"; OFS="\t" }  # Set the field separator and output field separator
+          /^@/ { print }  # Print header lines
 	  {
 		modified_cigar = $6;
-		gsub(/[0-9]+[MIDNP=X]/, "", modified_cigar);
-		n = split(modified_cigar, C, /[SH]/);
+		gsub(/[0-9]+[A-HJ-Z]/, "", modified_cigar);
+		n = split(modified_cigar, C, /I/);
 		soft_clip_total = 0;
 		for (i = 1; i <= n; i++) {
 			soft_clip_total += C[i];
@@ -1896,13 +1904,13 @@ filterORPHANS(){
 	awk '
 		BEGIN {FS="\t"; OFS="\t"} # Set the field separator and output field separator
 		{
-		 if($1 ~ /^@/) {print; next}
-         else {
-			c[$1]++;
-			l[$1,c[$1]]=$0
-		 }
-		}
-		END {
+			if($1 ~ /^@/) {
+				print; next
+			} else {
+				c[$1]++;
+				l[$1,c[$1]]=$0
+		 	}
+		} END {
 			for (i in c) {
 				if (c[i] > 1) {
 					for (j = 1; j <= c[i]; j++) {
@@ -1923,22 +1931,22 @@ function FILTERBAM(){
 		echo "";echo "  "`date` " Filtering bam files by Samtools Flags, Soft Clipped Bases, Alignment Scores relative to Read Length, and Orphans..."
 		ls *$CUTOFFS-RAW.bam | \
 			sed 's/\-RAW.bam//g' | \
-			parallel --no-notice --env _ -j $NUMProc "filterSamFLAGS {}-RAW.bam $MAPPING_MIN_QUALITY $SAMTOOLS_VIEW_F $SAMTOOLS_VIEW_f $SAMTOOLS_VIEW_Fcustom $SAMTOOLS_VIEW_fcustom | filterAS $FILTER_MIN_AS $FILTER_MIN_AS_LEN | filterSoftClipTOTAL $SOFT_CLIP_CUT | filterORPHANS | samtools view -b -o {}-RG.bam "
+			parallel --no-notice --env _ -j $NUMProc "filterSamFLAGS {}-RAW.bam $MAPPING_MIN_QUALITY $SAMTOOLS_VIEW_F $SAMTOOLS_VIEW_f2 $SAMTOOLS_VIEW_Fcustom $SAMTOOLS_VIEW_fcustom | filterAS $FILTER_MIN_AS $FILTER_MIN_AS_LEN | filterSoftClipTOTAL $SOFT_CLIP_CUT | filterORPHANS | samtools view -b -o {}-RG.bam "
 	elif [[ "$SOFT_CLIP_CUT" == "no" && "$FILTER_ORPHANS" != "no" ]]; then
 		echo "";echo "  "`date` " Filtering bam files by Samtools Flags, Alignment Scores relative to Read Length, and Orphans..."
 		ls *$CUTOFFS-RAW.bam | \
 			sed 's/\-RAW.bam//g' | \
-			parallel --no-notice --env _ -j $NUMProc "filterSamFLAGS {}-RAW.bam $MAPPING_MIN_QUALITY $SAMTOOLS_VIEW_F $SAMTOOLS_VIEW_f $SAMTOOLS_VIEW_Fcustom $SAMTOOLS_VIEW_fcustom | filterAS $FILTER_MIN_AS $FILTER_MIN_AS_LEN | filterORPHANS | samtools view -b -o {}-RG.bam "
+			parallel --no-notice --env _ -j $NUMProc "filterSamFLAGS {}-RAW.bam $MAPPING_MIN_QUALITY $SAMTOOLS_VIEW_F $SAMTOOLS_VIEW_f2 $SAMTOOLS_VIEW_Fcustom $SAMTOOLS_VIEW_fcustom | filterAS $FILTER_MIN_AS $FILTER_MIN_AS_LEN | filterORPHANS | samtools view -b -o {}-RG.bam "
 	elif [[ "$SOFT_CLIP_CUT" != "no" && "$FILTER_ORPHANS" == "no" ]]; then
 		echo "";echo "  "`date` " Filtering bam files by Samtools Flags, Soft Clipped Bases, and Alignment Scores relative to Read Length..."
 		ls *$CUTOFFS-RAW.bam | \
 			sed 's/\-RAW.bam//g' | \
-			parallel --no-notice --env _ -j $NUMProc "filterSamFLAGS {}-RAW.bam $MAPPING_MIN_QUALITY $SAMTOOLS_VIEW_F $SAMTOOLS_VIEW_f $SAMTOOLS_VIEW_Fcustom $SAMTOOLS_VIEW_fcustom | filterAS $FILTER_MIN_AS $FILTER_MIN_AS_LEN | filterSoftClipTOTAL $SOFT_CLIP_CUT | samtools view -b -o {}-RG.bam "
+			parallel --no-notice --env _ -j $NUMProc "filterSamFLAGS {}-RAW.bam $MAPPING_MIN_QUALITY $SAMTOOLS_VIEW_F $SAMTOOLS_VIEW_f2 $SAMTOOLS_VIEW_Fcustom $SAMTOOLS_VIEW_fcustom | filterAS $FILTER_MIN_AS $FILTER_MIN_AS_LEN | filterSoftClipTOTAL $SOFT_CLIP_CUT | samtools view -b -o {}-RG.bam "
 	elif [[ "$SOFT_CLIP_CUT" == "no" && "$FILTER_ORPHANS" == "no" ]]; then
 		echo "";echo "  "`date` " Filtering bam files by Samtools Flags and Alignment Scores relative to Read Length..."
 		ls *$CUTOFFS-RAW.bam | \
 			sed 's/\-RAW.bam//g' | \
-			parallel --no-notice --env _ -j $NUMProc "filterSamFLAGS {}-RAW.bam $MAPPING_MIN_QUALITY $SAMTOOLS_VIEW_F $SAMTOOLS_VIEW_f $SAMTOOLS_VIEW_Fcustom $SAMTOOLS_VIEW_fcustom | filterAS $FILTER_MIN_AS $FILTER_MIN_AS_LEN | samtools view -b -o {}-RG.bam "
+			parallel --no-notice --env _ -j $NUMProc "filterSamFLAGS {}-RAW.bam $MAPPING_MIN_QUALITY $SAMTOOLS_VIEW_F $SAMTOOLS_VIEW_f2 $SAMTOOLS_VIEW_Fcustom $SAMTOOLS_VIEW_fcustom | filterAS $FILTER_MIN_AS $FILTER_MIN_AS_LEN | samtools view -b -o {}-RG.bam "
 	fi
 		
 	#Index the filtered bam files 
